Added chess account

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1 class="main-title">Dementii Priadko</h1>
     <p class="contact-info">Email: <a href="mailto:dementii.priadko@gmail.com" class="contact-link">dementii.priadko@gmail.com</a></p>
     <p class="contact-info">Phone: +380508220942</p>
+    <p class="chess_account">Chess Account: <a href="https://www.chess.com/member/beznadijka" target="_blank" class="contact-link">beznadijka</a></p>
     <p class="contact-info">LinkedIn: <a href="https://linkedin.com/in/dementii-priadko-322988212" target="_blank" class="contact-link">linkedin.com/in/dementii-priadko-322988212</a>
     </p>
     <button id="theme-toggle" class="theme-toggle-btn">Toggle Theme</button>
