--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <p class="job-period">USA | Mar 2025 – Present</p>
         <ul class="responsibilities-list">
             <li class="responsibility-item">Performed health checks on PostgreSQL databases to ensure optimal performance.</li>
-            <li class="responsibility-item">Developed a pipeline for zero downtime PostgreSQL database</li>
-            <li class="responsibility-item">Assisted with development of PostgreSQL monitoring tool</li>
-            <li class="responsibility-item">Performed a database clustering analysis for a company with a multi-billion valuation</li>
+            <li class="responsibility-item">Conducted database experiments (including benchmarks)</li>
+            <li class="responsibility-item">Adapted existing zero-downtime Postgres upgrade process for Crunchy Bridge</li>
+            <li class="responsibility-item">Performed a database clustering analysis</li>
         </ul>
     </div>
 </section>
