--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         <button type="submit" class="form-submit-btn">Send</button>
     </form>
 </section>
+<script>
+    const hour = new Date().getHours();
+    if (hour < 7 || hour >= 21) {
+        document.body.classList.add('dark-mode');
+    }
 
+    document.getElementById('theme-toggle').addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+    });
+</script>
 </body>
+
 </html>
