--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <section id="objective" class="cv-section objective-section">
     <h2 class="section-title">Objective</h2>
-    <p class="section-content">Dedicated Backend Engineer with 3 years of experience in API management and data processing. Seeking new
-        opportunities to grow and apply problem-solving skills to create efficient and scalable solutions.</p>
+    <p class="section-content">Dedicated Backend Engineer with 4 years of experience in API management, data processing and DB management.
+        Seeking new opportunities to grow and apply problem-solving skills to create efficient and scalable solutions.</p>
 </section>
 
 <section id="experience" class="cv-section experience-section">
@@ -31,7 +31,7 @@
     <div class="job-entry">
         <h3 class="job-title">Backend/Full Stack Engineer</h3>
         <p class="company-name"><strong>Undefeated</strong></p>
-        <p class="job-period">USA | June 2021 – Present</p>
+        <p class="job-period">USA | June 2021 – April 2025</p>
         <ul class="responsibilities-list">
             <li class="responsibility-item">Managed and integrated APIs to support various application functionalities.</li>
             <li class="responsibility-item">Processed large datasets to ensure accurate and timely data delivery.</li>
